--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   python-app:
     container_name: python-app
-    image: 34.121.95.79:5000/pythonapp:latest   # <- your private registry image
+    image: 34.121.95.79:5000/pythonapp:latest   # <- your private registry image here
     ports:
       - "5000:5000"
     environment:
